2006-12-18  dima  <dima.exe@gmail.com>
  * rails-core.el (rails-core:class-by-file): fix lowercase letter after "::"
  * rails-for-rhtml.el: apply patch #7300
  * rails-for-controller.el: apply patch #7300
  * rails.el: apply patch #7301, #7295
  * rails-lib.el (rails-lib:run-secondary-switch): apply patch #7314

2006-12-03  dima  <dima.exe@gmail.com>
  * rails-ruby.el (ruby-indent-command): using around filter
  * rails.el (ruby-mode-hook): symbols _ and : interpreted as word
  * rails-core.el (rails-core:class-by-file): apply patch #6377
  * rails-webrick.el: 
	Apply patch from Ray Baxter: remove rails-webrick:open-url and add rails-webrick:server-name

2006-12-01  dima  <dima.exe@gmail.com>
  * rails-navigation.el: 
	add "go to action"
	"go to partial" now support insert_html|replace_html
  * rails-core.el: add rails-core:view-name

2006-11-30 ronaldo <ronaldo@reflectivesurface.com>
  * *.el: fixed documentation string to better reflected Emacs conventions
  * rails-ui.el: 
	added a bunch of new snippets
	refactored key sequences to follow proper mode conventions
	added new menus (rake tests, customize, start default webrick)
	changed switch menu to use a richer set of options
  * rails-scripts.el:
	to-added rake tasks for tests (all, integration, functional, unit and recent tests)
  * rails-core.el:
	added a check for the API docs, allowing the user to generate them if wanted
	added a check for the existence of API files to avoid unnecessary messages
  * rails.el:
	changed the default layout template and moved it to a customization variable
	
2006-11-29 ronaldo <ronaldo@reflectivesurface.com>
  * rails-for-controller.el: fixed to use rails-core:menu
  * rails-core.el: added a way to automatically recognize if it's running under a 
	text-only terminal to avoid crashing Emacs when using x-popup-menu
  * rails-for-rhtml: changed to use rails-core:menu instead of x-popup-menu directory

2006-11-28 ronaldo <ronaldo@reflectivesurface.com>