@@ -1,3 +1,7 @@
+2006-12-25  dima  <dima.exe@gmail.com>
+  * rails-lib.el (yml-next-value): return nil if key not found
+  * rails.el: add sqlite support
+
 2006-12-18  dima  <dima.exe@gmail.com>
   * rails-core.el (rails-core:class-by-file): fix lowercase letter after "::"
   * rails-for-rhtml.el: apply patch #7300
